--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
 
   <body>
@@ -26,12 +27,10 @@
     <!-- Страница -->
     <main>
       <!-- Верхняя линия -->
-      <div>
-        <section>
-          <h1>Эффективные решения для вашего бизнеса</h1>
-          <button type="button">Заказать услугу</button>
-        </section>
-      </div>
+      <section>
+        <h1>Эффективные решения для вашего бизнеса</h1>
+        <button type="button">Заказать услугу</button>
+      </section>
       <!-- Frame 1 -->
       <section>
         <h2>Преимущества</h2>
@@ -65,7 +64,9 @@
             </p>
           </li>
         </ul>
-        <h4>Чем мы занимаемся</h4>
+      </section>
+      <section>
+        <h2>Чем мы занимаемся</h2>
         <ul>
           <li>
             <img
@@ -144,9 +145,11 @@
     <footer>
       <a href="" lang="en-us">WebStudio</a>
       <address>
-        г. Киев, пр-т Леси Украинки, 26 <br />
-        info@example.com <br />
-        +38 099 111 11 11
+        <ul>
+          <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
+          <li><a href="mailto:info@example.com">info@example.com</a></li>
+          <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+        </ul>
       </address>
     </footer>
   </body>
